--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js_arrays1.js"></script>
+    
+    
+    <h1 id="title">Contenido:</h1>
+
+
+    <input type="text" placeholder="Pon un numero" id="number1" >
+    <input type="text" placeholder="Pon otro numero" id="number2" >
+
+    <button id="btn">y haremos una suma</button>
+
+    <script src="./ej-practico5.js"></script>
 </body>
 </html>
